# video_watermark

./: .gitignore  README.md  env.txt  pyproject.toml
scripts/: run_audio.py  run_audio.sh  run_concate.py  run_concate.sh  run_scale.py  run_scale.sh  run_share.py  run_share.sh  run_upload.py  run_upload.sh  run_watermark.py  run_watermark.sh
src/algorithm/: __init__.py
src/algorithm/firekepper/: __init__.py  ncc.py  psnr.py  tools.py  watermark.py
src/video_watermark/: __init__.py  audio.py  check_upload.py  concate.py  main.py  scale.py  share.py  upload.py
src/video_watermark/common/: __init__.py  command.py  directories.py  environment.py  file_operations.py  logging_config.py  person_management.py  video_operations.py
src/video_watermark/core/: __init__.py  core.py  ffmpeg_processor.py  pils.py  video_watermark_processor.py  videoprocess.py
src/video_watermark/tool/: __init__.py  baidupcs.py  baidushare.py  shell_utils.py  wechat.py
