[project]
name = "video_watermark"
version = "0.0.1"
description = "add watermark for videos"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [

]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["video_watermark"]
package-dir = {"" = "src"}